--- a/k8s-spring-app.yaml
+++ b/k8s-spring-app.yaml
@@ -5,9 +5,9 @@ metadata:
   name: spring-application
   labels:
     app: spring-application
-    version: "1.0.1"
+    version: "1.0.2"
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 80
       targetPort: 8080
@@ -21,7 +21,7 @@ metadata:
   name: spring-application
   labels:
     app: spring-application
-    version: "1.0.1"
+    version: "1.0.2"
 spec:
   replicas: 1
   selector:
@@ -31,11 +31,11 @@ spec:
     metadata:
       labels:
         app: spring-application
-        version: "1.0.1"
+        version: "1.0.2"
     spec:
       containers:
         - name: spring-application
-          image: "acrspring01.azurecr.io/spring-application:1.0.1"
+          image: "acrspring01.azurecr.io/spring-application:1.0.2"
           imagePullPolicy: Always
           envFrom:
             []
@@ -90,3 +90,30 @@ spec:
         - name: tz-config
           hostPath:
             path: /usr/share/zoneinfo/America/Lima
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: spring-application
+  labels:
+    app: spring-application
+    version: "1.0.2"
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "Request-Id: $req_id";
+spec:
+  rules:
+    - http:
+        paths:
+          - path: /spring-application/(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: spring-application
+                port:
+                  number: 80
