--- a/k8s-spring-app.yaml
+++ b/k8s-spring-app.yaml
@@ -5,7 +5,7 @@ metadata:
   name: spring-application
   labels:
     app: spring-application
-    version: "1.0.2"
+    version: "1.0.3"
 spec:
   type: ClusterIP
   ports:
@@ -21,7 +21,7 @@ metadata:
   name: spring-application
   labels:
     app: spring-application
-    version: "1.0.2"
+    version: "1.0.3"
 spec:
   replicas: 1
   selector:
@@ -31,11 +31,11 @@ spec:
     metadata:
       labels:
         app: spring-application
-        version: "1.0.2"
+        version: "1.0.3"
     spec:
       containers:
         - name: spring-application
-          image: "acrspring01.azurecr.io/spring-application:1.0.2"
+          image: "acrspring01.azurecr.io/spring-application:1.0.3"
           imagePullPolicy: Always
           envFrom:
             []
@@ -46,6 +46,8 @@ spec:
               value: "spring-application"
             - name: "SPRING_PROFILES_ACTIVE"
               value: "dev"
+            - name: "SPRING_CONFIG_IMPORT"
+              value: "configserver:http://config-server.spring.svc.cluster.local:80"
             - name: "spring.main.banner-mode"
               value: "off"
           ports:
@@ -97,7 +99,7 @@ metadata:
   name: spring-application
   labels:
     app: spring-application
-    version: "1.0.2"
+    version: "1.0.3"
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
